--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@next/font": "^13.0.5",
-    "@prisma/client": "^4.6.1",
+    "@prisma/client": "4.12.0",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.3",
     "next": "^13.0.5",
     "next-auth": "^4.17.0",
     "react": "^18.2.0",
@@ -27,7 +28,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "^13.0.5",
     "postcss": "^8.4.12",
-    "prisma": "^4.6.1",
+    "prisma": "4.12.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
   }
